# wallpaper.rs

./: Cargo.toml  readme.md
.github/: dependabot.yml
.github/workflows/: build.yml
src/: error.rs  lib.rs  macos.rs  unsupported.rs  windows.rs
src/linux/: deepin.rs  gnome.rs  lxde.rs  mate.rs  mod.rs  x_cinnamon.rs
src/windows/: legacy.rs  mod.rs  modern.rs
