[package]
name = "wallpaper"
version = "4.0.0"
edition = "2018"
authors = ["reujab <reujab@gmail.com>"]
description = "Gets and sets the desktop wallpaper/background."
repository = "https://github.com/reujab/wallpaper.rs"
readme = "readme.md"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
thiserror = "2.0.11"

[target.'cfg(unix)'.dependencies]
enquote = "1.1.0"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rust-ini = "0.21.1"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"], optional = true }
winreg = { version = "0.55.0", optional = true }
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Memory",
    "Win32_UI_Shell",
], optional = true }

[features]
winreg = ["dep:winreg", "dep:winapi"]
winrs = ["dep:windows"]
default = ["winrs"]