[package]
name = "wallpaper"
version = "5.0.0"
edition = "2018"
authors = ["reujab <reujab@gmail.com>"]
description = "Gets and sets the desktop wallpaper/background."
repository = "https://github.com/reujab/wallpaper.rs"
readme = "readme.md"
keywords = ["desktop", "wallpaper", "background"]
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
thiserror = "2.0.14"

[target.'cfg(unix)'.dependencies]
enquote = "1.1.0"

[target.'cfg(target_os = "linux")'.dependencies]
rust-ini = "0.21.2"
dirs = "6.0.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_UI_Shell",
] }
windows-registry = { version = "0.5.3", optional = true }

[features]
winreg = [
    "dep:windows-registry",
    "windows/Win32_UI_WindowsAndMessaging",
]
winrs = [
    "windows/Win32_Foundation",
    "windows/Win32_System_Com",
]
default = ["winrs"]
